--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">FarmStoreLocator</string>
+    <string name="app_name">Farm Store Locator</string>
+    <string name="test">Lorem Ipsum</string>
+    <string name="settings_page">Settings Page</string>
+    <string name="tb_menu">Toolbar Menu</string>
 </resources>
