account_buyer.xml, qrscan.xml & toolbar_menu.xml updated fixed load_credit.xml & shoplist.xml (somehow the textSize was set to 18, it should've been 18sp)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="scan">Scan Products</string>
     <string name="scanprod">Scan Product</string>
     <string name="payment">Proceed with Payment</string>
+    <string name="sum">Sum:</string>
+    <string name="dummysum">30,20€</string>
 </resources>
